--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -1,5 +1,15 @@
 // Vertical Rythm - Compass
 
+@font-face {
+  font-family: 'Amatic SC';
+  src: url('../../dist/fonts/AmaticSC-Regular.eot');
+  src: url('../../dist/fonts/AmaticSC-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/AmaticSC-Regular.woff') format('woff'),
+    url('../../dist/fonts/AmaticSC-Regular.ttf') format('truetype'),
+    url('../../dist/fonts/AmaticSC-Regular.svg#AmaticSC-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 //
 // Grille Typographie
