--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,7 +4,7 @@ $base-font-size:16px;
 $base-line-height:24px;
 
 $heading-font-color: grey;
-$headings-font-family:'Rokkitt', serif;
+$headings-font-family: "Amatic SC", Helvetica, Arial, sans-serif; //'Rokkitt', serif;
 $headings-font-weight:100;
 
 $body-font-color: #000;
